README and patchlevel.h for krb5-1.8.1 final
git-svn-id: svn://anonsvn.mit.edu/krb5/branches/krb5-1-8@23878 dc483132-0cff-0310-8789-dd5450dbe970

--- a/README
+++ b/README
@@ -400,16 +400,19 @@ reports, suggestions, and valuable resources:
     Ken Hornstein
     Henry B. Hotz
     Luke Howard
+    Jakub Hrozek
     Shumon Huque
     Jeffrey Hutzelman
     Wyllys Ingersoll
     Holger Isenberg
     Mikkel Kruse
     Volker Lendecke
+    Jan iankko Lieskovsky
     Ryan Lynch
     Franklyn Mendez
     Markus Moeller
     Paul Moore
+    Zbysek Mraz
     Edward Murrell
     Nikos Nikoleris
     Dmitri Pal
